hw19-project/k8s-config/sso-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sso
    spec:
      containers:
        - image: quay.io/keycloak/keycloak:22.0.1
          name: sso
          args: [ "start-dev --http-port=80 --hostname-debug=true --metrics-enabled=true" ]
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /opt/keycloak/data/h2
              name: sso-h2
      volumes:
        - name: sso-h2
          hostPath:
            path: /home/docker/volume/sso/h2
            type: Directory
