hw19-project/k8s-config/sso-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sso
  type: ClusterIP
