hw19-project/k8s-config/sso-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: sso
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: sso
                port:
                  number: 80
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: sso
                port:
                  number: 80
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: sso
                port:
                  number: 80
